--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "apt-get update && apt-get install -y python3 python3-pip"
+    "postinstall": "apt-get update && apt-get install -y python3 python3-pip && pip3 install -r requirements.txt"
   },
   "keywords": [],
   "author": "",
